--- a/QRCode/src/main/res/layout/activity_main.xml
+++ b/QRCode/src/main/res/layout/activity_main.xml
@@ -6,16 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.android.cameraview.CameraView
+    <SurfaceView
         android:id="@+id/camera"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:keepScreenOn="true"
-        app:aspectRatio="4:3"
-        app:autoFocus="true"
-        app:facing="back"
-        app:flash="off"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
